--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Free Cell</title>
-
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC:300,500|Roboto:700,700i&display=swap&subset=chinese-traditional" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -34,7 +34,7 @@
                 <div class="dot third">.</div>
             </div>
         </div>
-        <div id="mainPage" class="mainPage" style="display: none">
+        <div id="mainPage" class="mainPage">
             <div class="topsection">
                 <div id="clock" class="clock">00:00</div>
                 <div id="lefttCardDeck" class="leftCardDeck"></div>
