--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="dot third">.</div>
             </div>
         </div>
-        <div id="mainPage" class="mainPage">
+        <div id="mainPage" class="mainPage" style="display: none">
             <div class="topsection">
                 <div id="clock" class="clock">00:00</div>
                 <div id="lefttCardDeck" class="leftCardDeck"></div>
